Increase slips padding to prevent Crispr overlap
Crispr icon sometimes overlapped bottom slips action buttons

--- a/front/src/dashboard/Dashboard.scss
+++ b/front/src/dashboard/Dashboard.scss
@@ -1,3 +1,4 @@
 .dashboard-content {
   flex: 1;
+  padding-bottom: 40px; //prevent crispr icon to overlap slips list
 }
